--- a/EmployeeManagement/src/main/resources/application.properties
+++ b/EmployeeManagement/src/main/resources/application.properties
@@ -3,12 +3,13 @@ server-port=7070
 logging.level.org.springframework.web=debug
 
 #mysql Database
-spring.datasource.url=jdbc:mysql://localhost:3306/ems?useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/ems
 spring.datasource.username=root
 spring.datasource.password=88442164
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Hibernate properties
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
 
 
