--- a/EmployeeManagement/pom.xml
+++ b/EmployeeManagement/pom.xml
@@ -24,6 +24,13 @@
             <version>5.3.17</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-core</artifactId>
+            <version>5.3.17</version>
+        </dependency>
+
+
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -83,11 +90,7 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
-        <dependency>
-            <groupId>org.springframework.security</groupId>
-            <artifactId>spring-security-config</artifactId>
-            <version>5.6.0</version>
-        </dependency>
+
     </dependencies>
 
     <build>
