--- a/EmployeeManagement/src/main/resources/application.properties
+++ b/EmployeeManagement/src/main/resources/application.properties
@@ -12,6 +12,12 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
 
+jwt.secret=SecretKey
+jwt.expiration=3600000
+
+
+
+
 
 
 
